web-project/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:  
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:      
      serviceAccountName: secret-access-sa
      containers:
      - name: web
        image: nick1846/my-php:12.0
        ports:
          - name: http-port
            containerPort: 80
            protocol: "TCP"
