web-project/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  serviceName: database
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      serviceAccountName: secret-access-sa
      containers:
      - name: postgres
        image: nick1846/my-postgres:12.0
        ports:
        - name: postgredb
          containerPort: 5432         
        volumeMounts:
        - name: data
          mountPath: /data
          #subPath: data 
      volumes:
        - name: data
          emptyDir: {}
